Fixing vertical spacing on About section

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -184,7 +184,7 @@ p {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   column-gap: 1rem;
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: repeat(4, max-content);
   row-gap: 1rem;
 }
 
@@ -802,7 +802,7 @@ p {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     column-gap: 1rem;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(4, max-content);
     row-gap: 1rem;
   }
 
@@ -1112,7 +1112,7 @@ p {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     column-gap: 1rem;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(4, max-content);
     row-gap: 1rem;
   }
 
@@ -1425,7 +1425,7 @@ p {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     column-gap: 1rem;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(4, max-content);
     row-gap: 1rem;
   }
 
@@ -1738,7 +1738,7 @@ p {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     column-gap: 1rem;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(4, max-content);
     row-gap: 1rem;
   }
 
@@ -2052,7 +2052,7 @@ p {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     column-gap: 1rem;
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-rows: repeat(4, max-content);
     row-gap: 1rem;
   }
 
